[Offline pages] Fix order of error checking so URL mismatch would not override other error codes

BUG=717706

Review-Url: https://codereview.chromium.org/2860543002
Cr-Commit-Position: refs/heads/master@{#469082}

Former-commit-id: 7ed8f251fa9ae767f20a32abe8d70921b883d062